# synBio

./: README.md  cycloneDDSProfile.xml  cycloneDDSProfileNANO.xml
ZIMMER_test_description/: package.xml  setup.cfg  setup.py
ZIMMER_test_description/launch/: display.launch.py  gazebo.launch.py
ZIMMER_test_description/meshes/: CTYP00098_Etikett_1.stl  GEP2016IL-43-B1_AUFBAU_1.stl  GEP2016IL-43-B1_ZWISCHENBAC_2.stl  base_link.stl
ZIMMER_test_description/urdf/: ZIMMER_test.gazebo  ZIMMER_test.trans  ZIMMER_test.xacro  materials.xacro
opc-ua/scripts/: opcua_client.py
scripts/client_examples/: client-minimal.py
synbio_control/: README.md  package.xml  setup.cfg  setup.py
synbio_control/config/: controller_manager.yaml  left_robot_calibration.yaml  right_robot_calibration.yaml
synbio_control/launch/: rsp.launch.py  start_robot.launch.py
synbio_control/urdf/: synbio_env_controlled.urdf.xacro
synbio_description/: CMakeLists.txt  package.xml
synbio_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
synbio_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  my_robot_cell.ros2_control.xacro  my_robot_cell.srdf  ompl_planning.yaml  ros2_controllers.yaml  sensors_3d.yaml  synbio_env.ros2_control.xacro  synbio_env.srdf  synbio_env.urdf.xacro
synbio_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py
synbio_test/: package.xml  setup.cfg  setup.py
synbio_test/launch/: unity_testing.launch.py
synbio_test/synbio_test/: depth_features.py  fixed_frame_broadcaster.py  rgb_features.py  rs_read.py  sending_gpio.py  tf2_listener.py
workspace_test/: package.xml  setup.cfg  setup.py
workspace_test/launch/: display.launch.py
workspace_test/rviz/: workspace_analysis.rviz
workspace_test/urdf/: env_macro.xacro  left_robot.urdf.xacro  right_robot.urdf.xacro  synbio_description.urdf.xacro  synbio_env.urdf.xacro  synbio_scene.urdf.xacro  testing_macro.xacro  workspace_macro.xacro  workspace_urdf.xacro
zimmer_description/: package.xml  setup.cfg  setup.py
zimmer_description/config/: display.rviz  (+1 more)
zimmer_test_description/: package.xml  setup.cfg  setup.py
(+24 files in other folders)
