<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>synbio_control</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="caseashton2@gmail.com">case</maintainer>
  <license>TODO: License declaration</license>

  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>position_controllers</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>workspace_test</exec_depend>
  <exec_depend>ur_controllers</exec_depend>
  <exec_depend>ur_robot_driver</exec_depend>
  <exec_depend>ur_client_library</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>zimmer_gripper</exec_depend>
  <!-- <exec_depend>controller_manager</exec_depend> -->

  <depend>ros2_control</depend>
  <depend>ros2_controllers</depend>
  <depend>controller_manager</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
